--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,11 @@
 *.unity binary
 *.prefab binary
 *.asset binary
+*.anim binary
+*.controller binary
+*.mat binary
+*.png binary
+*.jpeg binary
+*.jpg binary
+*.wav binary
+*.mp3 binary
